# brainstorming

./: .env  .gitignore  README.md  pyproject.toml
src/brain_storming/: crew.py  main.py
src/brain_storming/config/: agents.yaml  tasks.yaml
