[project]
name = "brain_storming"
version = "0.1.0"
description = "brain_storming using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.148.0,<1.0.0"
]

[project.scripts]
brain_storming = "brain_storming.main:run"
run_crew = "brain_storming.main:run"
train = "brain_storming.main:train"
replay = "brain_storming.main:replay"
test = "brain_storming.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/brain_storming"]

[tool.crewai]
type = "crew"
